# cleancloud

./: .gitignore  README.md  pyproject.toml  results.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.md  feature_request.md  question.md
cleancloud/: cleancloud.yaml  cli.py  exit_policy.py
cleancloud/config/: schema.py
cleancloud/doctor/: aws.py  azure.py  runner.py
cleancloud/filtering/: tags.py
cleancloud/output/: json.py  summary.py
cleancloud/providers/aws/: doctor.py  scan.py  validate.py
cleancloud/providers/azure/: scan.py  session.py
cleancloud/providers/azure/rules/: unattached_managed_disks.py  untagged_resources.py
cleancloud/safety/aws/: allowlist.py
cleancloud/safety/azure/: allowlist.py
cleancloud/scan/: command.py
cleancloud/security/: aws-readonly-policy.json  azure-readonly-role.json
docs/: aws.md  safety.md
src/cleancloud/: cli.py
src/cleancloud/utils/: output.py
tests/cleancloud/: test_exit_policy.py
tests/cleancloud/cli/: test_cli_tag_precedence.py  test_scan_exit_codes.py
tests/cleancloud/config/: test_tag_filtering_schema.py
tests/cleancloud/filtering/: test_tags.py
tests/cleancloud/providers/azure/: test_azure_unattached_managed_disks.py
tests/cleancloud/safety/aws/: test_aws_iam_policy_readonly.py  test_aws_runtime_readonly.py  test_aws_static_readonly.py
tests/cleancloud/safety/azure/: test_azure_role_definition_readonly.py  test_azure_runtime_readonly.py  (+1 more)
tests/e2e/aws/: test_aws_auth.py  test_aws_cli_scan.py  test_aws_rules_smoke.py
tests/e2e/azure/: test_azure_rules_smoke.py
(+1 files in other folders)
